--- a/de/index.html
+++ b/de/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>母亲节快乐</title>
 </head>
 <script language="javascript" type="text/javascript">
   function next(type){
@@ -184,7 +184,7 @@
   left: 0;
 }
 #No1 .bx1{
-  width: 100%;
+  width: 70%;
   height: 100%;
 }
 
