--- a/de/index.html
+++ b/de/index.html
@@ -92,7 +92,7 @@
         </div>
   </div>
   <div id="No3" class="none">
-      <p>END....</p>
+      <p>I love you three thousand times...</p>
       <div class="bx">
           <img src="./img/bx.png" class="bx"/>
       </div>
@@ -172,7 +172,7 @@
   width: 100%;
   height: 80%;
   position:fixed;
-  top: 40px;
+  top: 60px;
   left: 0;
 }
 #No1 .bx1{
